# blue_pdf

./: LICENSE  README.md  Speed_Test.txt  TODO  a.txt  b.txt  k2.txt  koltin.txt  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/bluepdf/blue_pdf/: MainActivity.kt
lib/: main.dart  state_providers.dart
lib/components/: camera.dart  license.dart  split_view.dart
lib/screens/: about_page.dart  camera.dart  dropdown.dart  grid_view_overlay.dart  home_screen.dart  image_editor_screen.dart  image_viewer_screen.dart  license.dart  main_camera.dart  onbaording_screen.dart  onboarding.dart  pdf_viewer_screen.dart  privacy_policy_page.dart  process_success_screen.dart  save_pdf.dart  splash_screen.dart  split_view.dart
lib/services/: get_page_count.dart  image_to_pdf.dart  merge_pdf.dart  pdf_encryptor.dart  render_page.dart  reorder_pdf.dart  split_pdf.dart  unlock_pdf.dart  update_service.dart
lib/tools/: merge_pdf.dart  split_pdf.dart
